<resources>
    <string name="app_name">FirebaseNotesApp</string>
    <string name="notesApp">NotesApp</string>
    <string name="login_register">Login/Register</string>
    <string name="profile">Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_out_failed">Sign Out Failed</string>
    <string name="sign_out_successful">Sign Out Successful</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="save_note">Save note</string>
    <string name="choose_image">Choose image</string>
    <string name="new_note">New note</string>
    <string name="data_missing">Data missing</string>
    <string name="item_added_successfully">Item added successfully into database</string>
    <string name="item_added_failed">Failed to add item into database</string>
    <string name="note_not_changed">Note has not been changed</string>
    <string name="note_updated_successfully">Note updated successfully</string>
    <string name="failed_update">Failed to update note</string>
    <string name="failed_delete">Failed to delete note</string>
    <string name="note_deleted_successfully">Note deleted successfully</string>
    <string name="display_name">Display Name</string>
    <string name="update_profile">Update Profile</string>
    <string name="display_name_cannot_be_empty">Display name can not be empty</string>
    <string name="display_name_different">Display name must be different from old display name</string>
    <string name="failed_to_update_display_name">Failed to update display name</string>
    <string name="display_name_updated_successfully">Display name updated successfully</string>
    <string name="update_note">Update note</string>
    <string name="all_notes">All notes</string>
    <string name="archived_notes">Archived notes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="firebase_notes_app">FirebaseNotesApp</string>
</resources>
