<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
            android:id="@+id/textViewNewTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_note"
            android:textSize="20sp"
            android:textColor="#000"
            android:layout_margin="5dp"
            android:layout_gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
            android:id="@+id/linLayChooseImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/textViewNewTask"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <Button
                android:id="@+id/buttonChoseImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:textColor="@color/colorBlack"
                android:text="@string/choose_image"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_margin="5dp"
                android:layout_gravity="center"/>

        <ImageView
                android:id="@+id/imageMark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:src="@drawable/ic_not_uploaded"/>

    </LinearLayout>


    <EditText
            android:id="@+id/editTextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/title"
            app:layout_constraintTop_toBottomOf="@id/linLayChooseImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
            android:id="@+id/editTextDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/description"
            app:layout_constraintTop_toBottomOf="@id/editTextTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <Button
            android:id="@+id/buttonSaveNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/save_note"
            android:textSize="15sp"
            android:textColor="@color/colorBlack"
            android:text="@string/save_note"
            android:layout_margin="5dp"
            android:layout_gravity="center"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/editTextDescription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>